--- a/bower.json
+++ b/bower.json
@@ -1,9 +1,9 @@
 {
-  "name": "saleor",
-  "version": "0.0.0",
-  "homepage": "https://github.com/mirumee/saleor",
+  "name": "GALLANT",
+  "version": "0.0.1",
+  "homepage": "https://github.com/jw84/gallant",
   "authors": [
-    "Mirumee Software"
+    "GALLANT"
   ],
   "license": "BSD",
   "dependencies": {
